--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@vitejs/plugin-react": "^4.3.2",
-    "eslint": "^8",
-    "typescript": "^5",
-    "vite": "^5.4.8"
+    "eslint": "^9.22.0",
+    "typescript": "~5.7.2",
+    "vite": "^6.3.1"
   }
 }
