--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@mui/icons-material": "^7",
     "@mui/material": "^7",
     "@mui/material-nextjs": "^7",
-    "@toolpad/core": "0.15.0",
+    "@toolpad/core": "^0.15.0",
     "react": "^19",
     "react-dom": "^19",
     "react-router-dom": "^7.6.0",
