--- a/package.json
+++ b/package.json
@@ -1,28 +1,29 @@
 {
-  "name": "agenda",
-  "version": "0.1.0",
+  "name": "agenda-pro-front",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11",
-    "@emotion/styled": "^11",
-    "@mui/icons-material": "^7",
-    "@mui/material": "^7",
-    "@mui/material-nextjs": "^7",
-    "@toolpad/core": "^0.15.0",
-    "react": "^19",
-    "react-dom": "^19",
-    "react-router-dom": "^7.6.0",
-    "zod": "^3.24.2"
+    "lucide-react": "^0.511.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.1"
   },
   "devDependencies": {
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "@vitejs/plugin-react": "^4.3.2",
-    "eslint": "^9.22.0",
-    "typescript": "~5.7.2",
-    "vite": "^6.3.1"
+    "@eslint/js": "^9.25.0",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
+    "@vitejs/plugin-react": "^4.4.1",
+    "eslint": "^9.25.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
+    "globals": "^16.0.0",
+    "vite": "^6.3.5"
   }
 }
